Jump Start Changelog
====================

2.1.3 - XX/XX/XXXX
------------------

* **Updated Theme Blvd framework to 2.6.2**
* Fixed: Action hooks `themeblvd_main_bottom` and `themeblvd_main_end` were reversed in *footer.php*.
* Fixed: In-dashboard theme updates not working with older server setups -- *An error occurred while updating Jump Start: Download failed. SSL: no alternative certificate subject name matches target host name 'wpjumpstart.com'*
* Fixed: On some slider styles, navigation arrows were falling below image links, so they couldn't be clicked.

--------------------------------------------------------------

2.1.2 - 07/12/2016
------------------

* Improvement: Better RTL support for uses of Bootstrap carousel, like with simple slider element.
* Fixed: Black background getting applied to single post content, when full-width or parallax featured image is set.
* Fixed: Minor RTL fixes for options interfaces.
* Updated TGMA plugin installer to 2.6.1.

--------------------------------------------------------------

2.1.1 - 07/08/2016
------------------

* **Updated Theme Blvd framework to 2.6.1**
* New: Styles presets added to theme options; see *Appearance > Theme Options > Styles*.
* New: Added option to hide bounding border for transparent header of "Agent" base; see *Appearance > Theme Options > Styles > Transparent Header*.
* New: Added option to disable theme's WooCommerce floating shopping cart; see *Appearance > Theme Options > Plugins > WooCommerce*.
* New: Added option for Google Maps API Key, which is required by Google Maps API, as of June 22, 2016; see *Appearance > Theme Options > Configuration > Google Maps*. [Learn More](http://docs.themeblvd.com/article/56-google-maps-api)
* Improvement: Better handling of pulling default value for new option, when theme options have already been saved (i.e. smoother updates when the theme adds new options, which you haven't configured).