@@ -157,8 +157,8 @@ if ( ! is_admin() || ( defined('DOING_AJAX') && DOING_AJAX ) ) {
 	add_filter( 'wp_head', 'themeblvd_wp_title_compat', 5 ); // Only used with WP 4.0-
 
 	// Header hooks
+	add_action( 'themeblvd_header_before', 'themeblvd_header_before_default' );
 	add_action( 'themeblvd_header_top', 'themeblvd_header_top_default' );
-	add_action( 'themeblvd_header_above', 'themeblvd_header_above_default' );
 	add_action( 'themeblvd_header_content', 'themeblvd_header_content_default' );
 	add_action( 'themeblvd_header_addon', 'themeblvd_responsive_menu_toggle');
 	add_action( 'themeblvd_header_logo', 'themeblvd_header_logo_default' );
